# game-engine-old

./: .gdbinit  .gitignore  AndroidManifest.xml  CMakeLists.txt  FindLLVM.cmake  Makefile.ndk  README.txt  build.xml  cmake-eclipse-linux-debug.sh  cmake-eclipse-mingw-debug.bat  cmake-eclipse-mingw.bat  cmake-mingw-debug.bat  cmake-mingw.bat  cmake-msys-debug.bat  cmake-msys.bat  code-style.xml  gcovr  local.properties
anim8tor/: an8_format.txt
character-editor/: CMakeLists.txt
compiler/: CMakeLists.txt
compiler/inc/: ResourceCompiler.h  ResourceCompilerImpl.h  ResourceLoader.h
compiler/plugins/: CMakeLists.txt  DotMeshLoader.cpp  DotSceneLoader.cpp  DotSceneLoader.h  EffectLoader.cpp  FBXLoader.cpp  FBXLoader.h  MS3DModel.cpp  MS3DModel.h  MS3DModelLoader.cpp  MaterialLoader.cpp  MemoryTexture.cpp  MemoryTexture.h  MeshLoader.h  ObjSceneLoader.cpp  ObjSceneLoader.h  TGALoader.cpp  mathlib.cpp
compiler/plugins/collada/inc/: ColladaDocument.h  ColladaElement.h  ColladaGeometricPrimitive.h  ColladaGeometry.h  ColladaImage.h  CreateGeometry.h  CreateScene.h
compiler/plugins/collada/src/: ColladaDocument.cpp  ColladaGeometricPrimitive.cpp  ColladaSceneLoader.cpp  CreateGeometry.cpp  CreateScene.cpp
compiler/src/: ResourceCompilerImpl.cpp  main.cpp
engine/: CMakeLists.txt
engine/inc/: Allocator.h  AnimationSystem.h  Application.h  Bone.h  Bounding.h  Buffer.h  Clock.h  Component.h  ControllerManager.h  DeviceObject.h  DynamicLibrary.h  Effect.h  EntitySystem.h  EventManager.h  EventQueueHandler.h  Exception.h  Exports.h  File.h  FileUtil.h  Framebuffer.h  Frustum.h  GPUComputing.h  Game.h  GameEntity.h  GeneralHashFunction.h  Geometry.h  GeometryData.h  GraphicManager.h  GraphicManagerExtra.h  HardwareBuffer.h  HardwareTexture.h  Hashed.h  Image.h  KDTree.h  KeyEvent.h  KeyboardManager.h  Light.h  Material.h  MaterialAttribute.h  MemoryManager.h  (+50 more)
engine/inc/android/: AndroidApplication.h  AndroidGraphicManager.h
engine/inc/grammar/: Grammar.h  Sentence.h  Tokenizer.h
engine/inc/gui/: Container.h  Control.h  Event.h  Rect.h  Window.h  WindowManager.h
engine/inc/linux/: LinuxApplication.h  LinuxGraphicManager.h  LinuxWindow.h  linux.h
engine/inc/math/: AxisAngle.h  EulerAngle.h  MathUtil.h  Matrix.h  Matrix3.h  Matrix34.h  Matrix4.h  Plane.h  Quaternion.h  Transformation.h  Vector.h  Vector2.h  Vector3.h  Vector4.h  fixed.h
engine/inc/win32/: Win32Application.h  Win32GraphicManager.h  Win32Window.h  win32.h
engine/src/main/: AnimationSystem.cpp  Application.cpp  Buffer.cpp  Clock.cpp  Component.cpp  ControllerManager.cpp  DynamicLibrary.cpp  Effect.cpp  EntitySystem.cpp  EventManager.cpp  File.cpp  Framebuffer.cpp  Frustum.cpp  GameEntity.cpp  Geometry.cpp  GeometryData.cpp  GraphicManager.cpp  HardwareBuffer.cpp  HardwareTexture.cpp  Image.cpp  KDTree.cpp  KeyboardManager.cpp  Light.cpp  Material.cpp  MemoryManager.cpp  Model.cpp  ModelBuilder.cpp  MouseManager.cpp  Node.cpp  ObjectList.cpp  Octree.cpp  OctreeBuilder.cpp  OctreeNode.cpp  OpenCL.cpp  PluginManager.cpp  QueryList.cpp  RenderEntity.cpp  RenderingSystem.cpp  ReplacementNew.cpp  Resource.cpp  (+16 more)
engine/src/main/android/: AndroidApplication.cpp  AndroidGraphicManager.cpp
engine/src/main/grammar/: Grammar.cpp  Tokenizer.cpp
engine/src/main/gui/: Container.cpp  Control.cpp  Window.cpp  WindowManager.cpp
engine/src/main/linux/: LinuxApplication.cpp  LinuxGraphicManager.cpp  LinuxWindow.cpp
engine/src/main/math/: Matrix4.cpp
engine/src/main/win32/: Win32Application.cpp  Win32GraphicManager.cpp  Win32Window.cpp
engine/src/test/: MockSceneTreeObject.h  TestBounding.cpp  TestComponent.cpp  TestControl.cpp  TestControllerManager.cpp  TestEntity.cpp  TestFrustum.cpp  TestKeyboardManager.cpp  TestMouseManager.cpp  TestOctree.cpp  TestOctreeData.cpp  TestOctreeNode.cpp  TestPlane.cpp  TestResourceManager.cpp  TestSceneManager.cpp  TestTransformation.cpp
engine/src/test/resources/: octree-data.txt
game/: CMakeLists.txt
game/inc/: DeferredShadingRenderer.h  GeometricMeshImpl.h  LightPrePass.h  MyGame.h  MyImpls.h  Rasterizer.h  Rasterizer2.h  SimpleRenderer.h  SoftwareRenderer.h  VoxelRenderer.h
game/src/main/: MyGame.cpp  Rasterizer.cpp  Rasterizer2.cpp  android_main.cpp  main.cpp
glew/: CMakeLists.txt
gmock/: CMakeLists.txt
gtest/: CMakeLists.txt
jni/: Android.mk  Application.mk  main.cpp
resources/: resources.xml
resources/images/: CasaRosa.tga  Yellowhouse.tga  bombermanBody.tga  bombermanFace.tga  brickbump_normal.tga  casaamarela.tga  ciel_nuages_512x512.tga  cow.tga  default_ddn.tga  estrada-cruz.tga  estrada.tga  grass.tga  metal-tiles-dirt.tga  passeio-corner.tga  passeio-side.tga  passeio-tile.tga  rooftiles.tga  toit.tga  whitehouselittle.tga
resources/materials/: CasaRosa.material.xml  Mat1Tex1.material.xml  Mat5Tex0.material.xml  Yellowhouse.material.xml  blinn3SG.material.xml  casaamarela.material.xml  estrada-cruz.material.xml  estrada.material.xml  grass.material.xml  mat0.material.xml  metal-tiles-dirt.material.xml  passeio-corner.material.xml  passeio-side.material.xml  passeio-tile.material.xml  rooftiles.material.xml  simple.effect.xml  toit.material.xml  whitehouselittle.material.xml
resources/scene/: CubeBox.mesh.xml  CubeRoom.mesh.xml  Helicopter.ms3d  Scene.material  Sphere.mesh.xml  animated_cylinder.ms3d  bla.dae  bomberman.ms3d  cena.an8  cow.dae  cube.an8  cube.mtl  dice.dae  floresta.an8  floresta.mtl  large-scene.scene.xml  level.mesh.xml  master.mtl  simple-scene.scene.xml  sphere.mtl  sponza.mtl  teste-grupo.dae  teste.an8
resources/shaders/: depthFragment.frag.c  depthVertex.vert.c  fragment.frag.c  lightingFragment.frag.c  lightingVertex.vert.c  shadowFragment.frag.c  shadowVertex.vert.c  simpleFragment.frag.c  simpleVertex.vert.c  vertex.vert.c  voxel.frag.c  voxel.vert.c
resources/shaders/image-processing/: blur.frag.c  (+9 more)
spikes/: CMakeLists.txt  material-sample.xml  shader-sample.xml  spikes.cpp  spikes.h
tinyxml/: CMakeLists.txt
world-editor/: CMakeLists.txt
world-editor/inc/: SimpleRenderer.h
world-editor/src/: main.cpp
(+8 files in other folders)
